Added struct sizes + changed order

--- a/structv2i.html
+++ b/structv2i.html
@@ -505,6 +505,12 @@ Related Functions</h2></td></tr>
 <li>A struct defined in another way</li>
 <li>A union</li>
 </ul>
+<p>Sizes of this vector:</p>
+<ul>
+<li>2 elements of type <code>int32_t</code> (32 bits)</li>
+<li>8 bytes</li>
+<li>64 bits</li>
+</ul>
 <dl class="section attention"><dt>Attention</dt><dd>This definition does not correspond to any actual implementation and should never used directly. </dd>
 <dd>
 The actual implementation depends on the target architecture. </dd>
