--- a/structv16f.html
+++ b/structv16f.html
@@ -595,6 +595,12 @@ Related Functions</h2></td></tr>
 <li>A struct defined in another way</li>
 <li>A union</li>
 </ul>
+<p>Sizes of this vector:</p>
+<ul>
+<li>16 elements of type <code>float</code> (32 bits)</li>
+<li>64 bytes</li>
+<li>512 bits</li>
+</ul>
 <dl class="section attention"><dt>Attention</dt><dd>This definition does not correspond to any actual implementation and should never used directly. </dd>
 <dd>
 The actual implementation depends on the target architecture. </dd>
