--- a/structv2d.html
+++ b/structv2d.html
@@ -505,6 +505,12 @@ Related Functions</h2></td></tr>
 <li>A struct defined in another way</li>
 <li>A union</li>
 </ul>
+<p>Sizes of this vector:</p>
+<ul>
+<li>2 elements of type <code>double</code> (64 bits)</li>
+<li>16 bytes</li>
+<li>128 bits</li>
+</ul>
 <dl class="section attention"><dt>Attention</dt><dd>This definition does not correspond to any actual implementation and should never used directly. </dd>
 <dd>
 The actual implementation depends on the target architecture. </dd>
