--- a/structv8i.html
+++ b/structv8i.html
@@ -565,6 +565,12 @@ Related Functions</h2></td></tr>
 <li>A struct defined in another way</li>
 <li>A union</li>
 </ul>
+<p>Sizes of this vector:</p>
+<ul>
+<li>8 elements of type <code>int32_t</code> (32 bits)</li>
+<li>32 bytes</li>
+<li>256 bits</li>
+</ul>
 <dl class="section attention"><dt>Attention</dt><dd>This definition does not correspond to any actual implementation and should never used directly. </dd>
 <dd>
 The actual implementation depends on the target architecture. </dd>
