--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="fragment"><div class="line"><span class="keywordtype">float</span> dotprod_v8f(<span class="keyword">const</span> <span class="keywordtype">float</span>* a, <span class="keyword">const</span> <span class="keywordtype">float</span>* b, <span class="keywordtype">int</span> n) {</div>
 <div class="line">  <span class="comment">// Local var declarations</span></div>
 <div class="line">  <span class="keywordtype">int</span> i;</div>
-<div class="line">  <a class="code" href="structv8i.html">v8i</a> vmask;</div>
-<div class="line">  <a class="code" href="structv8f.html">v8f</a> va, vb, s,</div>
-<div class="line">      sp, add1, add1p, add2, add2p, add3; <span class="comment">// used only for the final reduction</span></div>
+<div class="line">  <a class="code" href="structv8f.html">v8f</a> va, vb, s;</div>
+<div class="line">  <a class="code" href="structm8f.html">m8f</a> vmask;</div>
 <div class="line"></div>
 <div class="line">  <span class="comment">// initialization</span></div>
 <div class="line">  s = <a class="code" href="group__set.html#gae34f02fd37f3ca8b22958718cc44e9d4">v8f_zero</a>();</div>
@@ -106,23 +105,18 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="line">    s = <a class="code" href="group__arith.html#ga7f24f8ef9179b11fad584cfd3ae3bf14">v8f_fmadd</a>(va, vb, s);</div>
 <div class="line"></div>
 <div class="line">  } <span class="comment">/* remainder */</span> {</div>
-<div class="line">    vmask = <a class="code" href="group__cmp.html#ga810d3b70a69141070054eb12d126d6ca">v8i_gt</a>(<a class="code" href="group__set.html#ga9dfb44be9a21ddb52ee40bb659774458">v8i_set1</a>(n-i), <a class="code" href="group__set.html#ga90f0cf1f4d13b2328447fffd849c9499">v8i_set</a>(0, 1, 2, 3, 4, 5, 6, 7));</div>
+<div class="line">    vmask = <a class="code" href="group__mconvert.html#gab82cbf1409eaee100b18c08b2a1aaf38">m8f_cvt_m8i</a>(<a class="code" href="group__mcmp.html#ga9a6884f8015ade89f2166fff09bb569f">m8i_gt</a>(<a class="code" href="group__set.html#ga9dfb44be9a21ddb52ee40bb659774458">v8i_set1</a>(n-i), <a class="code" href="group__set.html#ga90f0cf1f4d13b2328447fffd849c9499">v8i_set</a>(0, 1, 2, 3, 4, 5, 6, 7)));</div>
 <div class="line">    va = <a class="code" href="group__load.html#ga7f8cbdb5c95eb74031910f114d55c266">v8f_loadu</a>(&amp;a[i]);</div>
 <div class="line">    vb = <a class="code" href="group__load.html#ga7f8cbdb5c95eb74031910f114d55c266">v8f_loadu</a>(&amp;b[i]);</div>
-<div class="line">    va = <a class="code" href="group__logic.html#ga5b8388150c286cd131c02f683f3c9d7a">v8f_and</a>(va, <a class="code" href="group__cast.html#gaa17847ce73d6a874574b4c875709560f">v8f_cast_v8i</a>(vmask));</div>
+<div class="line">    va = <a class="code" href="group__mov.html#ga714a3f1b2ed1d3c5c0f618b3b7c497b7">v8f_maskz_move</a>(vmask, va);</div>
 <div class="line">    s = <a class="code" href="group__arith.html#ga7f24f8ef9179b11fad584cfd3ae3bf14">v8f_fmadd</a>(va, vb, s);</div>
 <div class="line">  }</div>
 <div class="line"></div>
 <div class="line">  <span class="comment">// reduce s</span></div>
-<div class="line">  sp = <a class="code" href="group__shuffle.html#gaf50a78b995fbd8b5ad4771d8ccc5efb6">v8f_permute2</a>(s, PINTS_SHUFFLE(1, 0));</div>
-<div class="line">  add1 = <a class="code" href="group__arith.html#gaca32427238a28d76a576c093c3a14647">v8f_add</a>(s, sp);</div>
-<div class="line">  add1p = <a class="code" href="group__shuffle.html#ga6f0f67ec91fab6ea38a1186f80dec368">v8f_permute4x2</a>(add1, PINTS_SHUFFLE(2, 3, 0, 1));</div>
-<div class="line">  add2 = <a class="code" href="group__arith.html#gaca32427238a28d76a576c093c3a14647">v8f_add</a>(add1, add1p);</div>
-<div class="line">  add2p = <a class="code" href="group__shuffle.html#gaf70525aedb9b0b551450060421d18170">v8f_permute2x4</a>(add2, PINTS_SHUFFLE(1, 0));</div>
-<div class="line">  add3 = <a class="code" href="group__arith.html#gaca32427238a28d76a576c093c3a14647">v8f_add</a>(add2, add2p);</div>
+<div class="line">  s = <a class="code" href="group__red.html#gac4f8d920efc0e0db3c1cd7f16b1d2b0b">v8f_reduce_add</a>(s);</div>
 <div class="line"></div>
-<div class="line">  <span class="comment">// convert 1st element of add3 to float</span></div>
-<div class="line">  <span class="keywordflow">return</span> <a class="code" href="group__sconvert.html#gaec0955e6be08432f14cede49d1311d4a">sf_cvt_v8f</a>(add3);</div>
+<div class="line">  <span class="comment">// convert 1st element of s to float</span></div>
+<div class="line">  <span class="keywordflow">return</span> <a class="code" href="group__sconvert.html#gaec0955e6be08432f14cede49d1311d4a">sf_cvt_v8f</a>(s);</div>
 <div class="line">}</div>
 </div><!-- fragment --><h2>How can I use it in my project?</h2>
 <p>You need to copy the folder <code>include</code> of this repository into your project and include the file <code>pints.h</code> wherever you want to use it.</p>
