--- a/index.html
+++ b/index.html
@@ -113,10 +113,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="line">  }</div>
 <div class="line"></div>
 <div class="line">  <span class="comment">// reduce s</span></div>
-<div class="line">  s = <a class="code" href="group__red.html#gac4f8d920efc0e0db3c1cd7f16b1d2b0b">v8f_reduce_add</a>(s);</div>
-<div class="line"></div>
-<div class="line">  <span class="comment">// convert 1st element of s to float</span></div>
-<div class="line">  <span class="keywordflow">return</span> <a class="code" href="group__sconvert.html#gaec0955e6be08432f14cede49d1311d4a">sf_cvt_v8f</a>(s);</div>
+<div class="line">  <span class="keywordflow">return</span> <a class="code" href="group__red.html#gab807f037e33418dcc511bab6d9aa4a65">sf_reduce_add_v8f</a>(s);</div>
 <div class="line">}</div>
 </div><!-- fragment --><h2>How can I use it in my project?</h2>
 <p>You need to copy the folder <code>include</code> of this repository into your project and include the file <code>pints.h</code> wherever you want to use it.</p>
